--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -2389,5 +2389,13 @@
     "pagebuilder_hierarchy_overlay_video_player": "Video player",
     "@pagebuilder_hierarchy_overlay_video_player": {
         "description": "Video player element in the hierarchy overlay in the pagebuilder"
+    },
+    "pagebuilder_mobile_not_supported_title": "PageBuilder only available for desktop",
+    "@pagebuilder_mobile_not_supported_title": {
+        "description": "Title of the Mobile not Supported View in the Pagebuilder"
+    },
+    "pagebuilder_mobile_not_supported_subtitle": "The PageBuilder is only available on desktop devices. Please open this page on a computer or laptop.\n\n If you're already on a computer, resize the browser window.",
+    "@pagebuilder_mobile_not_supported_subtitle": {
+        "description": "Subtitle of the Mobile not Supported View in the Pagebuilder"
     }
 }
